--- a/TODO.txt
+++ b/TODO.txt
@@ -79,19 +79,22 @@ Posibles nuevos operadores:
 Ideas:
 Bot de discord.
 
-*Anotación automática de frases con coreNLP y uso de entidades?
-
-*Medición de cohesion, separation and confusing phrases. []
+*[Si] Medición de cohesion, separation and confusing phrases. []
   -> Tensorflow y universal sentence encoding [https://www.javacodegeeks.com/2019/07/similarity-using-universal-sentence-encoder.html]
      · https://github.com/awslabs/djl/blob/master/examples/src/main/java/ai/djl/examples/inference/UniversalSentenceEncoder.java
 *Medicion de intentDetectionConfidence: https://stackoverflow.com/questions/48039722/how-to-determine-confidence-level-in-dialogflow/56122074#56122074
    
-*Caracteristicas del texto: text statistics (number of words per sentence), sentiment analysis, readability metrics (Flesch-Reading-Ease)   
+*[Si] Caracteristicas del texto: text statistics (number of words per sentence), sentiment analysis, readability metrics (Flesch-Reading-Ease)
+
+*[No] Anotación automática de frases con coreNLP y uso de entidades?
+
+* Testing de entidades y de expresiones regulares.   
 ==================================================================================================
 CORENLP (OpenSource)(https://corenlp.run/)
 WORDNET (OpenSource)(http://wordnetweb.princeton.edu/perl/webwn)
 LANGUAGE TOOL (OpenSource)(https://languagetool.org/)
 
+NLP Sentence Encoder: Similarity(https://jinglescode.github.io/demos/nlp-sentence-encoder)
 WS4J (OpenSource)(https://ws4jdemo.appspot.com/) Similarity
 Deep Java Library (OpenSource)(https://djl.ai/)
 Quillbot (privado)(https://quillbot.com/)
